--- a/WPF_Inventory/ActivityLogs.xaml
+++ b/WPF_Inventory/ActivityLogs.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF_Inventory"
         mc:Ignorable="d"
-        Title="ActivityLogs"  Height="700" Width="1000" Left="450" Top="170" x:Name="frm_login">
+        Title="ActivityLogs"  Height="700" Width="1000" WindowStartupLocation="CenterScreen" x:Name="frm_login">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="267*"/>
